# SysOpy17

./: README.md
cw01/: CMakeLists.txt
cw01/zad1/: CMakeLists.txt
cw01/zad2/: main.c
cw01/zad3/zad3a/: Makefile  results.txt
cw01/zad3/zad3b/: libaddrbook.h  main.c
cw01/zad4/: Makefile  gdb.txt  main.c
cw02/: CMakeLists.txt  polecenie.txt
cw02/zad1/: generator.c  makefile  program.c  sorter.c  tekst1.txt
cw02/zad2/: makefile  zad2_nftw.c  zad2_no_nftw.c
cw02/zad3/: locker.c  makefile
cw03/: CMakeLists.txt
cw03/zad1/: input.txt  makefile  program  program.c  test_prog  test_prog.c
cw03/zad2/: input.txt  makefile  out  program  program.c  set_cpu  set_cpu.c  t.sh  test_prog  test_prog.c
cw04/: CMakeLists.txt
cw04/zad1/: printer.c
cw04/zad2/: zad2.c
cw04/zad3/: Makefile  child.c  program3.c
cw05/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  master  slave
cw05/zad1/: interpreter.c  interpreter2.c
cw05/zad2/: mandelbrot.c  master.c  slave.c
lab1/: CMakeLists.txt
lab1/cw01/: CMakeLists.txt  Makefile  prog.c
lab1/cw01/zad1/: CMakeLists.txt  libaddrbook.c  libaddrbook.h  main.c
lab1/cw01/zad2/: CMakeCache.txt  main.c  mainDynamic.c
lab1/cw01/zad3/: CMakeLists.txt
lab1/cw01/zad3/lib_dyn/: libaddrbook.c
lab1/cw01/zad3/zad3a/: Makefile  main.c  mainDynamic.c  results.txt
lab1/cw01/zad3/zad3b/: Makefile  mainDynamic  mainShared  mainStatic  results.txt
lab1/cw01/zad4/: CMakeLists.txt
