cmake_minimum_required(VERSION 3.0)
project(cw03)
set(CMAKE_C_FLAGS "-std=c99")

set(CMAKE_CXX_STANDARD 11)
MESSAGE( STATUS "CMAKE_SOURCE_DIR:         " ${CMAKE_SOURCE_DIR} )
MESSAGE( STATUS "CMAKE_CURRENT_SOURCE_DIR: " ${CMAKE_CURRENT_SOURCE_DIR} )
MESSAGE( STATUS "CMAKE_BINARY_DIR:         " ${CMAKE_BINARY_DIR} )
set(SOURCE
        ${CMAKE_CURRENT_SOURCE_DIR}/zad1/program.c
        )
set(CMAKE_BINARY_DIR
        ${CMAKE_CURRENT_BINARY_DIR}/zad1
        )
add_executable(${CMAKE_BINARY_DIR}/prog1 ${CMAKE_CURRENT_SOURCE_DIR}/zad1/program.c)

MESSAGE( STATUS "CMAKE_BINARY_DIR:         " ${CMAKE_BINARY_DIR} )
